--- a/tasks.css
+++ b/tasks.css
@@ -6,14 +6,18 @@ body {
     overflow: hidden;
 
 }
+
 #cabecario {
     background-color: #16537ed8;
-    height:  100px;
-    padding-top: 2px;
-    
-    
-   
+    height:  105px;
+    width: 100%;
+    opacity: 10;
+    position: absolute;
+    z-index: 400;
+  
 }
+
+
 #usuario{
 margin-left: 95%;
 margin-top: 10px;
@@ -51,8 +55,8 @@ h2 {
 
 #pic0{
     
-    margin-left: 44%;
-    margin-top: -10px;
+    margin-left: 43%;
+    margin-top: -8px;
     position: absolute;
    
 }
@@ -62,12 +66,17 @@ h2 {
     size: 3cm;
     padding-top: 45px;
     padding-bottom: 1px;
+    z-index: 300;
+    top: 80%;
+    left: 42%;
+    position: absolute;
 }
 
 input{
     width: 300px;
     height: 80px;
     border-radius: 10px;
+    top: 90%;
 }
 
 mark{
@@ -83,13 +92,14 @@ overflow-x: hidden;
 font-size: 20px;
 font-family: 'Helvetica';
 background-color: #052a46;
-margin-left: 33%;
+margin-left: 34%;
 text-align: center;
-margin-top: 5px;
+margin-top: 211px;
 border-radius: 10px;
-height: 700px;
-width: 700px;
-
+height: 670px;
+width: 670px;
+z-index: 300;
+position: absolute;
 
 }
 ::-webkit-scrollbar{
@@ -119,12 +129,14 @@ width: 700px;
 
 #taskContainer::-webkit-scrollbar-button{
     background-color: #134a71;
+    
 }
 
 task_text{
     top: 2px;
     padding-top: 0px;
     margin-top: -10px;
+    z-index: 300;
 }
 
 :root{
@@ -148,7 +160,7 @@ task_text{
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
-    
+    z-index: 300;
     bottom: 60px;
 }
 #rodape {
@@ -159,12 +171,8 @@ task_text{
     
     
 }
-#pic1{
-    top: 82%;
-    margin-left: 23%;
-    position: absolute;
-    
-}
+
+
 
 #pic2{
     position: absolute;
@@ -210,15 +218,17 @@ task_text{
 }
 
 #pic9{
-    top: 35%;
-    left: -930px;
+    top: 25%;
+    left: -1050px;
     position: absolute;
 }
 
 #pic10{
-    top: 5%;
-    margin-left: -100px;
-    position: absolute;
+    align-self: center;
+    margin-top: 2.9%;
+    margin-left: 610px;
+    z-index: -300;
+    position: relative;
 }
 
 
