--- a/tasks.css
+++ b/tasks.css
@@ -6,6 +6,11 @@ body {
     overflow: hidden;
 
 }
+@media screen and (min-width: 320px){
+width: 100%;
+}
+    
+
 
 #cabecario {
     background-color: #16537ed8;
