--- a/tasks.css
+++ b/tasks.css
@@ -12,7 +12,7 @@ body {
     height:  110px;
     width: 100%;
     opacity: 10;
-    position: absolute;
+    position: fixed;
     z-index: 400;
   
 }
@@ -94,9 +94,9 @@ font-family: 'Helvetica';
 background-color: #052a46;
 margin-left: 34%;
 text-align: center;
-margin-top: 214px;
+margin-top: 190px;
 border-radius: 10px;
-height: 670px;
+height: 60%;
 width: 670px;
 z-index: 300;
 position: absolute;
@@ -213,20 +213,20 @@ task_text{
 
 #pic8{
     position: absolute;
-   top: 10%;
+   top: 13%;
     margin-left: 89%;
 }
 
 #pic9{
-    top: 25%;
+    top: 20%;
     margin-left: -1050px;
     position: absolute;
 }
 
 #pic10{
-    align-self: center;
+    
     margin-top: 3.3%;
-    margin-left: 610px;
+    margin-left: 535px;
     z-index: -300;
     position: absolute;
 }
